syntax = "proto3";

option java_package = "ru.sberned.grpc.test.api";

message MailDTO {
  string to = 1;
  string from = 2;
  string subject = 3;
  string content = 4;
}

message MailServiceResponse {
  bool result = 1;
}

service MailService {
  rpc send(MailDTO) returns (MailServiceResponse) {}
}